<?xml version="1.0"?>
<package format="2">
  <name>pick_objects</name>
  <version>0.0.0</version>
  <description>The pick_objects package</description>


  <maintainer email="nvidia@todo.todo">nvidia</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
